Fix broken layout when fetching a big number of videos

--- a/src/components/VideosList/VideosList.scss
+++ b/src/components/VideosList/VideosList.scss
@@ -2,7 +2,10 @@
 
 .videosBody {
   width: 100%;
-  height: 60%;
+  max-width: 1200px;
+  height: 100%;
+  margin-top: 30px;
+  margin-bottom: 30px;
   @include flex(center, row, center);
   & .videosWrapper {
     width: 100%;
